@@ -14,6 +14,7 @@ Can set column dtype
 Show table as formatted text
 Fixed copy to clipboard
 Fix to import dialog error
+improvements to pivot,aggregate dialogs
 
 ------
 0.3.1
